# Pomodoro_timer_FastApi

./: .gitignore  Makefile  alembic.ini  dependecy.py  docker-compose.yml  pomodoro.db  pomodoro.sqlite  pyproject.toml  settings.py
alembic/versions/: 2025_04_21_2356-8da0f475c875_init.py  2025_04_22_0000-05eb5bea8fb0_category_type.py
cache/: accessor.py
database/: database.py  models.py
handlers/: __init__.py  ping.py  tasks.py
repository/: task.py
schema/: task.py
service/: task.py
